Tests with login to google account.

--- a/war/PlayersEngine.html
+++ b/war/PlayersEngine.html
@@ -50,9 +50,11 @@
       <tr>
         <td colspan="2" style="font-weight:bold;">Please enter your name:</td>        
       </tr>
+      
       <tr>
         <td id="nameFieldContainer"></td>
         <td id="sendButtonContainer"></td>
+        <!-- <td id="signButtonContainer"></td> -->
       </tr>
       <tr>
         <td colspan="2" style="color:red;" id="errorLabelContainer"></td>
