--- a/war/PlayersEngine.html
+++ b/war/PlayersEngine.html
@@ -11,7 +11,7 @@
 <!--                                                               -->
 <!-- Consider inlining CSS to reduce the number of requested files -->
 <!--                                                               -->
-<link type="text/css" rel="stylesheet" href="PlayersEngine.css">
+<link type="text/css" rel="stylesheet" href="css/PlayersEngine.css">
 
 <!--                                           -->
 <!-- Any title is fine                         -->
@@ -46,8 +46,18 @@
 			application to display correctly.</div>
 	</noscript>
 
-	<h1>PlayersEngine</h1>
-
-	<div id="playersList"></div>
+	<table align="center" border="1">
+		<tr>
+			<td><img src="images/zlin_rugby_logo.jpg" /></td>
+			<td>
+				<h1>PlayersEngine</h1>
+			</td>
+		</tr>
+		<tr>
+			<td colspan="2">
+				<div id="playersList" align="center"></div>
+			<td>
+		</tr>
+	</table>
 </body>
 </html>
