--- a/war/PlayersEngine.html
+++ b/war/PlayersEngine.html
@@ -50,7 +50,7 @@
 		<tr>
 			<td><img src="images/zlin_rugby_logo.jpg" /></td>
 			<td>
-				<h1>PlayersEngine</h1>
+				<h1 id="appTitle">PlayersEngine</h1>
 			</td>
 		</tr>
 		<tr>
