--- a/war/PlayersEngine.html
+++ b/war/PlayersEngine.html
@@ -8,6 +8,9 @@
 <head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 
+<!-- Setting the locale -->
+<meta name="gwt:property" content="locale=cz">
+
 <!--                                                               -->
 <!-- Consider inlining CSS to reduce the number of requested files -->
 <!--                                                               -->
