--- a/war/StarterApplication.html
+++ b/war/StarterApplication.html
@@ -11,7 +11,8 @@
     <!--                                                               -->
     <!-- Consider inlining CSS to reduce the number of requested files -->
     <!--                                                               -->
-    <link type="text/css" rel="stylesheet" href="PlayersEngine.css">
+    <link type="text/css" rel="stylesheet" href="css/bootstrap.css">
+    <link type="text/css" rel="stylesheet" href="css/PlayersEngine.css">
 
     <!--                                           -->
     <!-- Any title is fine                         -->
